--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -1,9 +1,10 @@
-run-name: "Oracle: ${{ (github.event_name == 'workflow_dispatch' && format('{0}_{1}_{2}', github.event.inputs.TargetAccount, github.event.inputs.Period, github.event.inputs.TargetHost) || (github.event_name == 'schedule' && format('{0}_{1}_{2}',inputs.TargetAccount, inputs.Period, inputs.TargetHost) || 'delius_core_development_dev_delius_primarydb'))}}_database_backup"
+name: "Oracle: Backup"
+run-name: "Oracle: ${{ (github.event_name == 'workflow_dispatch' && format('{0}_{1}_{2}', github.event.inputs.TargetEnvironment, github.event.inputs.Period, github.event.inputs.TargetHost || (github.event_name == 'schedule' && format('{0}_{1}_{2}',inputs.TargetEnvironment, inputs.Period, inputs.TargetHost || 'delius_core_development_dev_delius_primarydb'))}}_database_backup"
 on:
   workflow_dispatch:
     inputs:
-      TargetAccount:
-        description: "Target AWS Account [EC2 Tags: <environment-name>_<delius-environment-name>]"
+      TargetEnvironment:
+        description: "Target environment"
         required: true
         type: choice
         options:
@@ -66,7 +67,7 @@ on:
           - "-vvv"
           - "-vvvv"
       SourceCodeVersion:
-        description: "Source version for the  hmpps-delius-operation-automation. Enter a pull request, branch, commit ID, tag, or reference."
+        description: "Source version for the hmpps-delius-operation-automation. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
         default: "main"
       SourceConfigVersion:
@@ -76,7 +77,7 @@ on:
 
   workflow_call:
     inputs:
-      TargetAccount:
+      TargetEnvironment:
         description: "Target AWS Account [EC2 Tags: <environment-name>_<delius-environment-name>]"
         required: true
         type: string
@@ -96,7 +97,7 @@ on:
 
   push:
     branches:
-      - DBA-511
+      - DBA-531-BACKUP
     paths:
       - .github/workflows/oracle-backup.yml
       - playbooks/**
@@ -110,7 +111,7 @@ jobs:
   # Start deployment container job based on the build delius-ansible-aws image
   deployment:
     name: "oracle-backup"
-    environment: development
+    environment: delius-core-dev
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
@@ -120,12 +121,14 @@ jobs:
       validate_command: ansible-playbook operations/playbooks/oracle_backup/validate.yml
       delete_dbids_command: ansible-playbook operations/playbooks/oracle_backup/delete_dbids_not_in_use.yml
       inventory: inventory/ansible
-      TargetAccount: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetAccount || (github.event_name == 'schedule' && inputs.TargetAccount || (github.event_name == 'push' && 'delius_core_development_dev'))) }}"
+      TargetEnvironment: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetEnvironment || (github.event_name == 'schedule' && inputs.TargetEnvironment || (github.event_name == 'push' && 'delius_core_development_dev'))) }}"
       TargetHost: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetHost || (github.event_name == 'schedule' && inputs.TargetHost || (github.event_name == 'push' && 'delius_primarydb'))) }}"
       Period: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.Period || (github.event_name == 'schedule' && inputs.Period || (github.event_name == 'push' && 'daily')))  }}"
       FixAbsentChunks: "${{ github.event_name == 'workflow_dispatch' && github.event.inputs.FixAbsentChunks || 'yes' }}"
       DeleteDefunct: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.DeleteDefunct || (github.event_name == 'schedule' && inputs.DeleteDefunct || 'no')) }}"
       EnableTrace: "${{ github.event_name == 'workflow_dispatch' && github.event.inputs.EnableTrace || 'no' }}"
+      VerboseOutput: "${{ github.event_name == 'workflow_dispatch' && github.event.inputs.VerboseOutput || '' }}"
+      RmanTarget: "environment_name_${{ env.TargetEnvironment }}_${{ env.TargetHost }}"
     continue-on-error: false
     steps:
 
@@ -160,21 +163,12 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Start Ansible Backup
-        run: |
-          $backup_command -i $inventory \
-          -e rman_target=environment_name_${{ env.TargetAccount }}_${{ env.TargetHost }} \
-          -e daily_weekly=$Period \
-          -e enable_trace=$EnableTrace
+        run: $backup_command -i $inventory -e rman_target=$RmanTarget -e daily_weekly=$Period -e enable_trace=$EnableTrace $VerboseOutput
 
       - name: Start Ansible Validate And Fix Absent Chunks
-        run: |
-          $validate_command -i $inventory \
-          -e rman_target=environment_name_${{ env.TargetAccount }}_${{ env.TargetHost }} \
-          -e fix_absent_chunks=$FixAbsentChunks
+        run: $validate_command -i $inventory -e rman_target=$RmanTarget -e fix_absent_chunks=$FixAbsentChunks $VerboseOutput
 
       - name: Start Ansible Delete DBIDs Not In Use
         if: ${{ env.DeleteDefunct == 'yes' }}
-        run: |
-          $delete_dbids_command -i $inventory \
-          -e rman_target=environment_name_${{ env.TargetAccount }}_${{ env.TargetHost }}
+        run: $delete_dbids_command -i $inventory -e rman_target=$RmanTarget $VerboseOutput
           
