--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -1,5 +1,5 @@
 name: "Oracle: Backup"
-run-name: "Oracle: ${{ (github.event_name == 'workflow_dispatch' && format('{0}_{1}_{2}', github.event.inputs.TargetEnvironment, github.event.inputs.Period, github.event.inputs.TargetHost || (github.event_name == 'schedule' && format('{0}_{1}_{2}',inputs.TargetEnvironment, inputs.Period, inputs.TargetHost || 'delius_core_development_dev_delius_primarydb'))}}_database_backup"
+run-name: "Oracle: ${{ (github.event_name == 'workflow_dispatch' && format('{0}_{1}_{2}', github.event.inputs.TargetEnvironment, github.event.inputs.Period, github.event.inputs.TargetHost) || (github.event_name == 'schedule' && format('{0}_{1}_{2}',inputs.TargetEnvironment, inputs.Period, inputs.TargetHost) || 'delius_core_development_dev_delius_primarydb'))}}_database_backup"
 on:
   workflow_dispatch:
     inputs:
@@ -78,7 +78,7 @@ on:
   workflow_call:
     inputs:
       TargetEnvironment:
-        description: "Target AWS Account [EC2 Tags: <environment-name>_<delius-environment-name>]"
+        description: "Target environment"
         required: true
         type: string
       TargetHost:
