--- a/.github/workflows/oracle-db-schedule-dev-backup.yml
+++ b/.github/workflows/oracle-db-schedule-dev-backup.yml
@@ -3,6 +3,11 @@ on:
   schedule:
     - cron: '30 08 * * 1,2,4,5'
     - cron: '30 08 * * 3'
+  push:
+    branches:
+      - DBA-531-BACKUP
+    paths:
+      - .github/workflows/oracle-db-schedule-dev-backup.yml
 jobs:
   prepare-workflow-call:
     runs-on: ubuntu-latest
@@ -12,29 +17,31 @@ jobs:
       - name: Parse parameters
         id: parseparameters
         run: |
-          if [[ "${GITHUB_EVENT_NAME}" == "schedule" ]]
-          then
-            echo -n "parameters_matrix={\"include\":[" >> $GITHUB_OUTPUT
-            cron_time="${{github.event.schedule}}"
-            if [[ "${cron_time}" == '30 09 * * 1,2,4,5' ]]
-            then
-              echo -n '{"TargetAccount":"delius_core_development_dev","TargetHost":"delius_primarydb","Period":"daily"}' >> $GITHUB_OUTPUT
-            fi
-            if [[ "${cron_time}" == '30 06 * * 1' ]]
-            then
-              echo -n '{"TargetAccount":"delius_core_development_dev","TargetHost":"delius_primarydb","Period":"weekly"}' >> $GITHUB_OUTPUT
-            fi
+          # if [[ "${GITHUB_EVENT_NAME}" == "schedule" ]]
+          # then
+              echo -n "parameters_matrix={\"include\":[" >> $GITHUB_OUTPUT
+          #   cron_time="${{github.event.schedule}}"
+          #   if [[ "${cron_time}" == '30 09 * * 1,2,4,5' ]]
+          #   then
+              echo -n '{"TargetEnvironment":"delius_core_development_dev","TargetHost":"delius_primarydb","Period":"daily"}' >> $GITHUB_OUTPUT
+            # fi
+            # if [[ "${cron_time}" == '30 06 * * 1' ]]
+            # then
+              echo -n '{"TargetEnviroment":"delius_core_development_dev","TargetHost":"delius_primarydb","Period":"weekly"}' >> $GITHUB_OUTPUT
+            #fi
             echo "]}" >> $GITHUB_OUTPUT
-          fi
-  run-workflow-call:
-    needs: prepare-workflow-call
-    strategy:
-      matrix: ${{ fromJson(needs.prepare-workflow-call.outputs.parameters_matrix) }}
-      fail-fast: true
-    uses: 
-      ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-backup.yml@main
-    with:
-      TargetAccount: ${{ matrix.TargetAccount }}
-      TargetHost: ${{ matrix.TargetHost }}
-      Period: ${{ matrix.Period }}
-    secrets: inherit
+          #fi
+      - name: Output
+        run: echo $GITHUB_OUTPUT
+  # run-workflow-call:
+  #   needs: prepare-workflow-call
+  #   strategy:
+  #     matrix: ${{ fromJson(needs.prepare-workflow-call.outputs.parameters_matrix) }}
+  #     fail-fast: true
+  #   uses: 
+  #     ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-backup.yml@main
+  #   with:
+  #     TargetAccount: ${{ matrix.TargetAccount }}
+  #     TargetHost: ${{ matrix.TargetHost }}
+  #     Period: ${{ matrix.Period }}
+  #   secrets: inherit
