--- a/.github/workflows/oracle-db-schedule-dev-backup.yml
+++ b/.github/workflows/oracle-db-schedule-dev-backup.yml
@@ -1,4 +1,5 @@
-name: "Oracle: Scheduled Delius Development Database Backup"
+name: "Oracle: Backup"
+run-name: "Oracle: delius_core_dev_delius_primarydb_database_backup"
 on:
   schedule:
     - cron: '30 08 * * 1,2,4,5'
